# inference-lab

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  book.toml  package.json  release-please-config.json
.github/workflows/: docker.yml  docs.yml  release-please.yml
calibration/: .gitignore  README.md  pyproject.toml
calibration/configs/: qwen36-dflash-after.yaml  qwen36-dflash-before.yaml  qwen36-mtp.yaml
calibration/src/specdec_calibration/: __init__.py  cli.py  collect.py  config.py  datasets.py  export.py  modal_app.py  plugin.py  schema.py
calibration/src/specdec_calibration/hooks/: __init__.py  buffer.py  dflash.py  eagle.py  routing.py
calibration/tests/: test_buffer.py  test_collect.py  test_config.py  test_datasets.py  test_export.py  test_schema_roundtrip.py
configs/: deepseek-v4-flash-longctx.toml  deepseek-v4-flash.toml  deepseek-v4-pro.toml  llama31-8b-eagle3-gh200.toml  long_benchmark.toml  qwen3-vl-235b-a22b-instruct-fp8.toml  qwen3-vl-30b-a3b-instruct-fp8.toml  qwen3.5-35b-a3b.toml  qwen3.6-35b-a3b-gh200.toml  qwen3.6-35b-a3b.toml  qwen3_30b_a3b.toml  qwen3_30b_preemption_free.toml  test_blog.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: overview.md  request-processing.md  scheduling.md
docs/src/reference/: cli.md  config.md
docs/src/user-guide/: configuration.md  getting-started.md  running-simulations.md
examples/: cascade_demo.rs  config.toml  dataset_closed_loop.toml  dataset_config.toml  dsv4_decode_tpot_sweep.rs  dsv4_disagg_conc1.rs  engine_constrained_sweep.rs  engine_target_sweep.rs  hierarchy_demo.rs  long_benchmark.toml  quick_test.toml  qwen3_30b_a3b.toml  qwen3_30b_preemption_free.toml  sample_dataset.jsonl  spec_c1_gamma_sweep.rs  spec_decode_roofline.rs  spec_disagg_check.rs  spec_drafter_compare.rs  spec_drafter_grid.rs  spec_gating_ladder.rs
examples/specdec/: README.md  accept_by_dataset.py  dataset_card.md  export_banks.sh  publish_dataset.sh
scripts/: export_conf_banks.py
src/: dataset.rs  lib.rs  main.rs  wasm.rs
src/compute/: arithmetic.rs  engine.rs  measured.rs  mod.rs
src/config/: hardware.rs  mod.rs  model.rs  parallel.rs  scheduler.rs  speculative.rs  topology.rs  workload.rs
src/kv_cache/: block.rs  link.rs  manager.rs  mod.rs
src/metrics/: collector.rs  mod.rs  quantile.rs  summary.rs
src/request/: generator.rs  mod.rs  request.rs  status.rs
src/scheduler/: decision.rs  mod.rs  policy.rs  scheduler.rs
src/serve/: engine.rs  handlers.rs  mod.rs  types.rs
src/simulation/: disagg.rs  engine.rs  mod.rs  roofline.rs  simulator.rs
